--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mulika",
-  "version": "1.0.0",
-  "description": "Lightiest in-browser test tool",
+  "version": "1.0.1",
+  "description": "Lightiest & tiniest javascript test tool",
   "main": "src/index.js",
   "directories": {
     "test": "tests"
