--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "author": "Maye Edwin",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.4.0",
-    "fs": "0.0.1-security"
+    "colors": "^1.4.0"
   }
 }
