--- a/package.json
+++ b/package.json
@@ -33,7 +33,13 @@
     "colors": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.2"
+    "@types/jest": "^26.0.9",
+    "jest": "^26.4.0",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.2.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.7"
   },
   "repository": {
     "type": "git",
